启动服务器

--- a/6.gulp/src/index.html
+++ b/6.gulp/src/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <!-- inject:css -->
+    <!-- endinject -->
 </head>
 <body>
-777
-<script src="js/all.js"></script>
+index
+<!-- inject:js -->
+<!-- endinject -->
 </body>
 </html>
