--- a/9.websocket/1.query.html
+++ b/9.websocket/1.query.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>长轮询</title>
 </head>
 <body>
 <div id="clock"></div>
