--- a/9.websocket/1.query.html
+++ b/9.websocket/1.query.html
@@ -30,19 +30,23 @@
             xhr.send(event.target.value);
         }
     }
-    /*setInterval(function(){
+    setInterval(function(){
         let xhr = new XMLHttpRequest();
         xhr.open('GET','http://localhost:3000/message',true)
         //0-初始态 1-打开之后 2-发出请求 3 开始接收到响应之后  4 响应接收完毕之后
+        //设置响应体的类型是JSON的话，那么response就是JSON
+        xhr.responseType = 'json';
         xhr.onreadystatechange = function(){
             if(xhr.readyState == 4){//响应接收完毕
                 if(/2\d{2}/.test(xhr.status)){
-                    document.querySelector('#messages').innerHTML = xhr.responseText;
+                    //字符串数组映射为li数组
+                    let ul = document.querySelector('#messages');
+                    ul.innerHTML = xhr.response.map(item=>`<li>${item}</li>`).join('');
                 }
             }
         }
         xhr.send();
-    },2000);*/
+    },21);
 </script>
 </body>
 </html>
